--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 </html><!DOCTYPE html>
 <html>
 <head>
-  <title>Google Search</title>
+  <title>Multi Search</title>
 </head>
 <body>
   <input type="text" id="search-field" placeholder="Search for books" style="width: 300px;">
